Fixed functionality to go back to main page after submitting the form. Added functionality to autoreply to a form submission. Still trying to disable hover on mobile :)

--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,12 @@ main {
   color: rgb(0, 133, 208);
 }
 
+@media (hover: none) {
+  a:hover, .button:hover, .border_item:hover, .float:hover, .nav-link-button:hover {
+    background-color: initial;
+    color: initial;
+  }
+}
 @media (max-width: 1024px) {
   a:hover, .button:hover, .border_item:hover, .float:hover, .nav-link-button:hover {
     background-color: initial;
